# pubmed-rag

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
scripts/: 01_ingest.py  02_embed_and_index.py  03_query.py  04_ask.py  setup_data.sh
src/pubmed_rag/: __init__.py  api.py  config.py  embed.py  generate.py  index.py  ingest.py  prompt.py  retrieve.py
tests/: conftest.py  test_api.py  test_ingest.py  test_prompt.py
