[project]
name = "pubmed-rag"
version = "0.1.0"
description = "Retrieval-augmented generation over PubMed 200k RCT abstracts"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jaikishan Patel" }]

dependencies = [
    "numpy>=1.26",
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.8",
    "transformers>=4.44",
    "torch>=2.2",
    "accelerate>=0.30",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "tqdm>=4.66",
    "openai>=1.40",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"